<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wall4"
    tools:context=".SignIn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="30dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/logo1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/app_Name"
                android:textAlignment="center"
                android:textColor="@color/logo_d"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:background="@color/logo_d"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginTop="10dp"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_txt_bg"
                android:padding="10dp"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="280dp"
                    android:layout_height="50dp"
                    android:background="@drawable/prof2"
                    android:hint="Email"
                    android:layout_marginTop="20dp"
                    android:paddingHorizontal="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="#555555"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical">

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:paddingHorizontal="5dp"
                        android:textColor="@color/black"
                        android:textColorHint="#555555"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:background="@drawable/pswrd_bg1"/>

                    <ImageView
                        android:id="@+id/passwordShowHide"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:paddingRight="5dp"
                        android:background="@drawable/pswrd_bg2"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/forgot_txt"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Forgot Password?"
                    android:textAlignment="textEnd"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/logo_d"
                    android:text="@string/log_in"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    app:strokeColor="@color/logo_l"
                    app:strokeWidth="2dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="150dp"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center"
                android:textColor="#3C3C3C"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/signup_txt"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/logo_d"
                android:textSize="16sp"
                android:textStyle="italic" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>